We need to export this since it's used in a dcast, which need the typeinfo nodes to be global. Should fix crashes on importing bookmarks.

Credit to  Jonathan Marten for much of diagnosis and the testing.

BUG: 240874

svn path=/trunk/KDE/kdebase/apps/; revision=1143147